v1.0.0/modules/schema/pages/class/LoadBid.adoc
= `LoadBid`
:toclevels: 4


+++Offer to supply energy/ancillary services from a load resource (participating load reduces consumption).+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:LoadBid`


| CIM standard (perspective)
| IEC62325 (Market)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** xref::class/Document.adoc[`Document`]
*** xref::class/Bid.adoc[`Bid`]
**** xref::class/ResourceBid.adoc[`ResourceBid`]
***** *`LoadBid`*


== Slots



.Associated classes
[d2,svg,theme=4]
----
vars: {
  d2-config: {
    pad: 20
  }
}
LoadBid {
  style {
    fill: "#fffbef"
    shadow: true
  }
}

















LoadReductionPriceCurve {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



RampRateCurve {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



RegisteredLoad {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



AreaLoadBid {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



BidError {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



MarketParticipant {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



EnergyMarket {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



ChargeProfile {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



MitigatedBidSegment {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



RMRDetermination {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



MitigatedBid {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



BidHourlySchedule {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



ProductBid {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



ActionRequest {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



Status {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



ElectronicAddress {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



Status {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



ActivityRecord {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



ConfigurationEvent {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



Author {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



Editor {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



Approver {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



Issuer {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



DiagramObject {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



InstanceSet {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



Name {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}











LoadBid -> LoadReductionPriceCurve: LoadReductionPriceCurve


LoadBid -> RampRateCurve: RampRateCurve


LoadBid -> RegisteredLoad: RegisteredLoad


LoadBid -> AreaLoadBid: AreaLoadBid


LoadBid -> BidError: BidError


LoadBid -> MarketParticipant: MarketParticipant


LoadBid -> EnergyMarket: EnergyMarket


LoadBid -> ChargeProfile: ChargeProfiles


LoadBid -> MitigatedBidSegment: MitigatedBidSegment


LoadBid -> RMRDetermination: RMRDetermination


LoadBid -> MitigatedBid: MitigatedBid


LoadBid -> BidHourlySchedule: BidHourlySchedule


LoadBid -> ProductBid: ProductBids


LoadBid -> ActionRequest: ActionRequest


LoadBid -> Status: docStatus


LoadBid -> ElectronicAddress: electronicAddress


LoadBid -> Status: status


LoadBid -> ActivityRecord: ActivityRecord


LoadBid -> ConfigurationEvent: ConfigurationEvents


LoadBid -> Author: Author


LoadBid -> Editor: Editor


LoadBid -> Approver: Approver


LoadBid -> Issuer: Issuer


LoadBid -> DiagramObject: DiagramObjects


LoadBid -> InstanceSet: InstanceSet


LoadBid -> Name: Names


LoadBid -> ChangeSetMember: PropertiesCIMDataObject


LoadBid -> ChangeSetMember: TargetingCIMDataObject


legend: "" {
  style: {
    fill: transparent
    stroke: transparent
  }
  grid-rows: 3
  grid-columns: 2
  grid-gap: 10
  near: bottom-right
  iec61968_color: "" {
    style: {
      fill: "#d1e7c2"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61968_text: "IEC61968 (Enterprise)" {
    shape: text
  }
  iec61970_color: "" {
    style: {
      fill: "#eccfcb"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61970_text: "IEC61970 (Grid)" {
    shape: text
  }
  iec62325_color: "" {
    style: {
      fill: "#fffbef"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec62325_text: "IEC62325 (Market)" {
    shape: text
  }
}
----


[cols="3,1,3,6",width=100%]
|===
| Name | Cardinality | Type | Description

| <<ActionRequest,`ActionRequest`>>
| 1
| xref::class/ActionRequest.adoc[`ActionRequest`]
| n/a

| <<EnergyMarket,`EnergyMarket`>>
| 1
| xref::class/EnergyMarket.adoc[`EnergyMarket`]
| n/a

| <<InstanceSet,`InstanceSet`>>
| 1
| xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++

| <<ProductBids,`ProductBids`>>
| 1..*
| xref::class/ProductBid.adoc[`ProductBid`]
| +++A bid comprises one or more product bids of market products+++

| <<AreaLoadBid,`AreaLoadBid`>>
| 0..1
| xref::class/AreaLoadBid.adoc[`AreaLoadBid`]
| n/a

| <<RegisteredLoad,`RegisteredLoad`>>
| 0..1
| xref::class/RegisteredLoad.adoc[`RegisteredLoad`]
| n/a

| <<dropRampRate,`dropRampRate`>>
| 0..1
| xref::class/ActivePowerChangeRate.adoc[`ActivePowerChangeRate`]
| +++Maximum rate that load can be reduced (MW/minute)+++

| <<loadRedInitiationCost,`loadRedInitiationCost`>>
| 0..1
| xref::class/Money.adoc[`Money`]
| +++load reduction initiation cost+++

| <<loadRedInitiationTime,`loadRedInitiationTime`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++load reduction initiation time+++

| <<marketDate,`marketDate`>>
| 0..1
| https://w3id.org/linkml/Date[`date`]
| +++The date represents the NextMarketDate for which the load response bids apply to.+++

| <<meteredValue,`meteredValue`>>
| 0..1
| https://w3id.org/linkml/Boolean[`boolean`]
| +++Flag indicated that the load reduction is metered. (See above)
If priceSetting and meteredValue both equal 1, then the facility is eligible to set LMP in the real time market.+++

| <<minLoad,`minLoad`>>
| 0..1
| xref::class/ActivePower.adoc[`ActivePower`]
| +++Minimum MW load below which it may not be reduced.+++

| <<minLoadReduction,`minLoadReduction`>>
| 0..1
| xref::class/ActivePower.adoc[`ActivePower`]
| +++Minimum MW for a load reduction (e.g. MW rating of a discrete pump.+++

| <<minLoadReductionCost,`minLoadReductionCost`>>
| 0..1
| xref::class/Money.adoc[`Money`]
| +++Cost in $ at the minimum reduced load+++

| <<minLoadReductionInterval,`minLoadReductionInterval`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Shortest period load reduction shall be maintained before load can be restored to normal levels.+++

| <<minTimeBetLoadRed,`minTimeBetLoadRed`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Shortest time that load shall be left at normal levels before a new load reduction.+++

| <<pickUpRampRate,`pickUpRampRate`>>
| 0..1
| xref::class/ActivePowerChangeRate.adoc[`ActivePowerChangeRate`]
| +++Maximum rate load may be restored (MW/minute)+++

| <<priceSetting,`priceSetting`>>
| 0..1
| https://w3id.org/linkml/Boolean[`boolean`]
| +++Flag to indicate that the facility can set LMP Works in tandem with Metered Value.  Greater chance of this being dynamic than the Metered Value, however, it is requested that Price Setting and Metered Value stay at the same source.  Currently no customers have implemented the metering capability, but if this option is implemented, then Price Setting could become dynamic.  However, Metered Value will remain static.+++

| <<reqNoticeTime,`reqNoticeTime`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Time period that is required from an order to reduce a load to the time that it takes to get to the minimum load reduction.+++

| <<shutdownCost,`shutdownCost`>>
| 0..1
| xref::class/Money.adoc[`Money`]
| +++The fixed cost associated with committing a load reduction.+++

| <<LoadReductionPriceCurve,`LoadReductionPriceCurve`>>
| 0..*
| xref::class/LoadReductionPriceCurve.adoc[`LoadReductionPriceCurve`]
| n/a

| <<RampRateCurve,`RampRateCurve`>>
| 0..*
| xref::class/RampRateCurve.adoc[`RampRateCurve`]
| n/a

| <<Approver,`Approver`>>
| 0..1
| xref::class/Approver.adoc[`Approver`]
| +++Approver of this document.+++

| <<Author,`Author`>>
| 0..1
| xref::class/Author.adoc[`Author`]
| +++Author of this document.+++

| <<Editor,`Editor`>>
| 0..1
| xref::class/Editor.adoc[`Editor`]
| +++Editor of this document.+++

| <<Issuer,`Issuer`>>
| 0..1
| xref::class/Issuer.adoc[`Issuer`]
| +++Issuer of this document.+++

| <<MarketParticipant,`MarketParticipant`>>
| 0..1
| xref::class/MarketParticipant.adoc[`MarketParticipant`]
| n/a

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++

| <<aggregationFlag,`aggregationFlag`>>
| 0..1
| https://w3id.org/linkml/Integer[`integer`]
| +++Aggregation flag 
0: individual resource level
1: Aggregated node location
2: Aggregated price location)+++

| <<aliasName,`aliasName`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

| <<authorName,`authorName`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Name of the author of this document.+++

| <<bidStatus,`bidStatus`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| n/a

| <<comment,`comment`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Free text comment.+++

| <<commodityType,`commodityType`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Energy product (commodity) type:
'En' - Energy
'Ru' - Regulation Up
'Rd' - Regulation Dn
'Sr' - Spinning Reserve
'Nr' - Non-Spinning Reserve
'Or' - Operating Reserve+++

| <<contingencyAvailFlag,`contingencyAvailFlag`>>
| 0..1
| xref::enumeration/YesNo.adoc[`YesNo`]
| +++contingent operating reserve availiability (Yes/No). Resource is availiable to participate with capacity only in contingency dispatch.+++

| <<createdDateTime,`createdDateTime`>>
| 0..1
| https://w3id.org/linkml/Date[`date`]
| +++Date and time that this document was created.+++

| <<createdISO,`createdISO`>>
| 0..1
| xref::enumeration/YesNo.adoc[`YesNo`]
| +++A Yes indicates that this bid was created by the ISO.+++

| <<description,`description`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

| <<docStatus,`docStatus`>>
| 0..1
| xref::class/Status.adoc[`Status`]
| +++Status of this document. For status of subject matter this document represents (e.g., Agreement, Work), use 'status' attribute.
Example values for 'docStatus.status' are draft, approved, cancelled, etc.+++

| <<electronicAddress,`electronicAddress`>>
| 0..1
| xref::class/ElectronicAddress.adoc[`ElectronicAddress`]
| +++Electronic address.+++

| <<energyMaxDay,`energyMaxDay`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Maximum amount of energy per day which can be produced during the trading period in MWh+++

| <<energyMinDay,`energyMinDay`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Minimum amount of energy per day which has to be produced during the trading period in MWh+++

| <<lastModifiedDateTime,`lastModifiedDateTime`>>
| 0..1
| https://w3id.org/linkml/Date[`date`]
| +++Date and time this document was last modified. Documents may potentially be modified many times during their lifetime.+++

| <<mRID,`mRID`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

| <<marketSepFlag,`marketSepFlag`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Market Separation Flag

'Y' - Enforce market separation constraints for this bid 
'N' - Don't enforce market separation constraints for this bid.+++

| <<marketType,`marketType`>>
| 0..1
| xref::enumeration/MarketType.adoc[`MarketType`]
| +++The market type, DAM or RTM.+++

| <<minDispatchTime,`minDispatchTime`>>
| 0..1
| https://w3id.org/linkml/Integer[`integer`]
| +++minimum number of consecutive hours a resource shall be dispatched if bid is accepted+++

| <<name,`name`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++

| <<resourceLoadingType,`resourceLoadingType`>>
| 0..1
| https://w3id.org/linkml/Integer[`integer`]
| +++Resource loading curve type
1 - step-wise continuous loading
2 - piece-wise linear continuous loading
3 - block loading+++

| <<revisionNumber,`revisionNumber`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Revision number for this document.+++

| <<shutDownsMaxDay,`shutDownsMaxDay`>>
| 0..1
| https://w3id.org/linkml/Integer[`integer`]
| +++Maximum number of shutdowns per day.+++

| <<shutDownsMaxWeek,`shutDownsMaxWeek`>>
| 0..1
| https://w3id.org/linkml/Integer[`integer`]
| +++Maximum number of shutdowns per week.+++

| <<startTime,`startTime`>>
| 0..1
| https://w3id.org/linkml/Date[`date`]
| +++Start time and date for which bid applies.+++

| <<startUpsMaxDay,`startUpsMaxDay`>>
| 0..1
| https://w3id.org/linkml/Integer[`integer`]
| +++Maximum number of startups per day.+++

| <<startUpsMaxWeek,`startUpsMaxWeek`>>
| 0..1
| https://w3id.org/linkml/Integer[`integer`]
| +++Maximum number of startups per week.+++

| <<status,`status`>>
| 0..1
| xref::class/Status.adoc[`Status`]
| +++Status of subject matter (e.g., Agreement, Work) this document represents. For status of the document itself, use 'docStatus' attribute.+++

| <<stopTime,`stopTime`>>
| 0..1
| https://w3id.org/linkml/Date[`date`]
| +++Stop time and date for which bid is applicable.+++

| <<subject,`subject`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Document subject.+++

| <<title,`title`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Document title.+++

| <<type,`type`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Utility-specific classification of this document, according to its corporate standards, practices, and existing IT systems (e.g., for management of assets, maintenance, work, outage, customers, etc.).+++

| <<virtual,`virtual`>>
| 0..1
| https://w3id.org/linkml/Boolean[`boolean`]
| +++True if bid is virtual.  Bid is assumed to be non-virtual if attribute is absent+++

| <<ActivityRecord,`ActivityRecord`>>
| 0..*
| xref::class/ActivityRecord.adoc[`ActivityRecord`]
| +++The activity record for a document+++

| <<BidError,`BidError`>>
| 0..*
| xref::class/BidError.adoc[`BidError`]
| n/a

| <<BidHourlySchedule,`BidHourlySchedule`>>
| 0..*
| xref::class/BidHourlySchedule.adoc[`BidHourlySchedule`]
| n/a

| <<ChargeProfiles,`ChargeProfiles`>>
| 0..*
| xref::class/ChargeProfile.adoc[`ChargeProfile`]
| n/a

| <<ConfigurationEvents,`ConfigurationEvents`>>
| 0..*
| xref::class/ConfigurationEvent.adoc[`ConfigurationEvent`]
| +++All configuration events created for this document.+++

| <<DiagramObjects,`DiagramObjects`>>
| 0..*
| xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++

| <<MitigatedBid,`MitigatedBid`>>
| 0..*
| xref::class/MitigatedBid.adoc[`MitigatedBid`]
| n/a

| <<MitigatedBidSegment,`MitigatedBidSegment`>>
| 0..*
| xref::class/MitigatedBidSegment.adoc[`MitigatedBidSegment`]
| n/a

| <<Names,`Names`>>
| 0..*
| xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++

| <<RMRDetermination,`RMRDetermination`>>
| 0..*
| xref::class/RMRDetermination.adoc[`RMRDetermination`]
| n/a

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..*
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
|===

'''


//[discrete]
[#ActionRequest]
=== `ActionRequest`


[cols="h,4",width=65%]
|===
| URI
| `cim:Bid.ActionRequest`
| Cardinality
| 1
| Type
| xref::class/ActionRequest.adoc[`ActionRequest`]

| Inherited from
| xref::class/Bid.adoc[`Bid`]


|===

//[discrete]
[#ActivityRecord]
=== `ActivityRecord`
+++The activity record for a document+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Document.ActivityRecord`
| Cardinality
| 0..*
| Type
| xref::class/ActivityRecord.adoc[`ActivityRecord`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

//[discrete]
[#aggregationFlag]
=== `aggregationFlag`
+++Aggregation flag 
0: individual resource level
1: Aggregated node location
2: Aggregated price location)+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ResourceBid.aggregationFlag`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Integer[`integer`]

| Inherited from
| xref::class/ResourceBid.adoc[`ResourceBid`]


|===

//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Approver]
=== `Approver`
+++Approver of this document.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Document.Approver`
| Cardinality
| 0..1
| Type
| xref::class/Approver.adoc[`Approver`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

//[discrete]
[#AreaLoadBid]
=== `AreaLoadBid`


[cols="h,4",width=65%]
|===
| URI
| `cim:LoadBid.AreaLoadBid`
| Cardinality
| 0..1
| Type
| xref::class/AreaLoadBid.adoc[`AreaLoadBid`]


|===

//[discrete]
[#Author]
=== `Author`
+++Author of this document.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Document.Author`
| Cardinality
| 0..1
| Type
| xref::class/Author.adoc[`Author`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

//[discrete]
[#authorName]
=== `authorName`
+++Name of the author of this document.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Document.authorName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

//[discrete]
[#BidError]
=== `BidError`


[cols="h,4",width=65%]
|===
| URI
| `cim:ResourceBid.BidError`
| Cardinality
| 0..*
| Type
| xref::class/BidError.adoc[`BidError`]

| Inherited from
| xref::class/ResourceBid.adoc[`ResourceBid`]


|===

//[discrete]
[#BidHourlySchedule]
=== `BidHourlySchedule`


[cols="h,4",width=65%]
|===
| URI
| `cim:Bid.BidHourlySchedule`
| Cardinality
| 0..*
| Type
| xref::class/BidHourlySchedule.adoc[`BidHourlySchedule`]

| Inherited from
| xref::class/Bid.adoc[`Bid`]


|===

//[discrete]
[#bidStatus]
=== `bidStatus`


[cols="h,4",width=65%]
|===
| URI
| `cim:ResourceBid.bidStatus`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/ResourceBid.adoc[`ResourceBid`]


|===

//[discrete]
[#ChargeProfiles]
=== `ChargeProfiles`


[cols="h,4",width=65%]
|===
| URI
| `cim:Bid.ChargeProfiles`
| Cardinality
| 0..*
| Type
| xref::class/ChargeProfile.adoc[`ChargeProfile`]

| Inherited from
| xref::class/Bid.adoc[`Bid`]


|===

//[discrete]
[#comment]
=== `comment`
+++Free text comment.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Document.comment`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

//[discrete]
[#commodityType]
=== `commodityType`
+++Energy product (commodity) type:
'En' - Energy
'Ru' - Regulation Up
'Rd' - Regulation Dn
'Sr' - Spinning Reserve
'Nr' - Non-Spinning Reserve
'Or' - Operating Reserve+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ResourceBid.commodityType`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/ResourceBid.adoc[`ResourceBid`]


|===

//[discrete]
[#ConfigurationEvents]
=== `ConfigurationEvents`
+++All configuration events created for this document.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Document.ConfigurationEvents`
| Cardinality
| 0..*
| Type
| xref::class/ConfigurationEvent.adoc[`ConfigurationEvent`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

//[discrete]
[#contingencyAvailFlag]
=== `contingencyAvailFlag`
+++contingent operating reserve availiability (Yes/No). Resource is availiable to participate with capacity only in contingency dispatch.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ResourceBid.contingencyAvailFlag`
| Cardinality
| 0..1
| Type
| xref::enumeration/YesNo.adoc[`YesNo`]

| Inherited from
| xref::class/ResourceBid.adoc[`ResourceBid`]


|===

//[discrete]
[#createdDateTime]
=== `createdDateTime`
+++Date and time that this document was created.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Document.createdDateTime`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Date[`date`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

//[discrete]
[#createdISO]
=== `createdISO`
+++A Yes indicates that this bid was created by the ISO.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ResourceBid.createdISO`
| Cardinality
| 0..1
| Type
| xref::enumeration/YesNo.adoc[`YesNo`]

| Inherited from
| xref::class/ResourceBid.adoc[`ResourceBid`]


|===

//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#docStatus]
=== `docStatus`
+++Status of this document. For status of subject matter this document represents (e.g., Agreement, Work), use 'status' attribute.
Example values for 'docStatus.status' are draft, approved, cancelled, etc.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Document.docStatus`
| Cardinality
| 0..1
| Type
| xref::class/Status.adoc[`Status`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

//[discrete]
[#dropRampRate]
=== `dropRampRate`
+++Maximum rate that load can be reduced (MW/minute)+++

[cols="h,4",width=65%]
|===
| URI
| `cim:LoadBid.dropRampRate`
| Cardinality
| 0..1
| Type
| xref::class/ActivePowerChangeRate.adoc[`ActivePowerChangeRate`]


|===

//[discrete]
[#Editor]
=== `Editor`
+++Editor of this document.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Document.Editor`
| Cardinality
| 0..1
| Type
| xref::class/Editor.adoc[`Editor`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

//[discrete]
[#electronicAddress]
=== `electronicAddress`
+++Electronic address.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Document.electronicAddress`
| Cardinality
| 0..1
| Type
| xref::class/ElectronicAddress.adoc[`ElectronicAddress`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

//[discrete]
[#EnergyMarket]
=== `EnergyMarket`


[cols="h,4",width=65%]
|===
| URI
| `cim:Bid.EnergyMarket`
| Cardinality
| 1
| Type
| xref::class/EnergyMarket.adoc[`EnergyMarket`]

| Inherited from
| xref::class/Bid.adoc[`Bid`]


|===

//[discrete]
[#energyMaxDay]
=== `energyMaxDay`
+++Maximum amount of energy per day which can be produced during the trading period in MWh+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ResourceBid.energyMaxDay`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]

| Inherited from
| xref::class/ResourceBid.adoc[`ResourceBid`]


|===

//[discrete]
[#energyMinDay]
=== `energyMinDay`
+++Minimum amount of energy per day which has to be produced during the trading period in MWh+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ResourceBid.energyMinDay`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]

| Inherited from
| xref::class/ResourceBid.adoc[`ResourceBid`]


|===

//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Issuer]
=== `Issuer`
+++Issuer of this document.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Document.Issuer`
| Cardinality
| 0..1
| Type
| xref::class/Issuer.adoc[`Issuer`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

//[discrete]
[#lastModifiedDateTime]
=== `lastModifiedDateTime`
+++Date and time this document was last modified. Documents may potentially be modified many times during their lifetime.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Document.lastModifiedDateTime`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Date[`date`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

//[discrete]
[#loadRedInitiationCost]
=== `loadRedInitiationCost`
+++load reduction initiation cost+++

[cols="h,4",width=65%]
|===
| URI
| `cim:LoadBid.loadRedInitiationCost`
| Cardinality
| 0..1
| Type
| xref::class/Money.adoc[`Money`]


|===

//[discrete]
[#loadRedInitiationTime]
=== `loadRedInitiationTime`
+++load reduction initiation time+++

[cols="h,4",width=65%]
|===
| URI
| `cim:LoadBid.loadRedInitiationTime`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#LoadReductionPriceCurve]
=== `LoadReductionPriceCurve`


[cols="h,4",width=65%]
|===
| URI
| `cim:LoadBid.LoadReductionPriceCurve`
| Cardinality
| 0..*
| Type
| xref::class/LoadReductionPriceCurve.adoc[`LoadReductionPriceCurve`]


|===

//[discrete]
[#marketDate]
=== `marketDate`
+++The date represents the NextMarketDate for which the load response bids apply to.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:LoadBid.marketDate`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Date[`date`]


|===

//[discrete]
[#MarketParticipant]
=== `MarketParticipant`


[cols="h,4",width=65%]
|===
| URI
| `cim:Bid.MarketParticipant`
| Cardinality
| 0..1
| Type
| xref::class/MarketParticipant.adoc[`MarketParticipant`]

| Inherited from
| xref::class/Bid.adoc[`Bid`]


|===

//[discrete]
[#marketSepFlag]
=== `marketSepFlag`
+++Market Separation Flag

'Y' - Enforce market separation constraints for this bid 
'N' - Don't enforce market separation constraints for this bid.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ResourceBid.marketSepFlag`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/ResourceBid.adoc[`ResourceBid`]


|===

//[discrete]
[#marketType]
=== `marketType`
+++The market type, DAM or RTM.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Bid.marketType`
| Cardinality
| 0..1
| Type
| xref::enumeration/MarketType.adoc[`MarketType`]

| Inherited from
| xref::class/Bid.adoc[`Bid`]


|===

//[discrete]
[#meteredValue]
=== `meteredValue`
+++Flag indicated that the load reduction is metered. (See above)
If priceSetting and meteredValue both equal 1, then the facility is eligible to set LMP in the real time market.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:LoadBid.meteredValue`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]


|===

//[discrete]
[#minDispatchTime]
=== `minDispatchTime`
+++minimum number of consecutive hours a resource shall be dispatched if bid is accepted+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ResourceBid.minDispatchTime`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Integer[`integer`]

| Inherited from
| xref::class/ResourceBid.adoc[`ResourceBid`]


|===

//[discrete]
[#minLoad]
=== `minLoad`
+++Minimum MW load below which it may not be reduced.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:LoadBid.minLoad`
| Cardinality
| 0..1
| Type
| xref::class/ActivePower.adoc[`ActivePower`]


|===

//[discrete]
[#minLoadReduction]
=== `minLoadReduction`
+++Minimum MW for a load reduction (e.g. MW rating of a discrete pump.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:LoadBid.minLoadReduction`
| Cardinality
| 0..1
| Type
| xref::class/ActivePower.adoc[`ActivePower`]


|===

//[discrete]
[#minLoadReductionCost]
=== `minLoadReductionCost`
+++Cost in $ at the minimum reduced load+++

[cols="h,4",width=65%]
|===
| URI
| `cim:LoadBid.minLoadReductionCost`
| Cardinality
| 0..1
| Type
| xref::class/Money.adoc[`Money`]


|===

//[discrete]
[#minLoadReductionInterval]
=== `minLoadReductionInterval`
+++Shortest period load reduction shall be maintained before load can be restored to normal levels.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:LoadBid.minLoadReductionInterval`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#minTimeBetLoadRed]
=== `minTimeBetLoadRed`
+++Shortest time that load shall be left at normal levels before a new load reduction.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:LoadBid.minTimeBetLoadRed`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#MitigatedBid]
=== `MitigatedBid`


[cols="h,4",width=65%]
|===
| URI
| `cim:Bid.MitigatedBid`
| Cardinality
| 0..*
| Type
| xref::class/MitigatedBid.adoc[`MitigatedBid`]

| Inherited from
| xref::class/Bid.adoc[`Bid`]


|===

//[discrete]
[#MitigatedBidSegment]
=== `MitigatedBidSegment`


[cols="h,4",width=65%]
|===
| URI
| `cim:Bid.MitigatedBidSegment`
| Cardinality
| 0..*
| Type
| xref::class/MitigatedBidSegment.adoc[`MitigatedBidSegment`]

| Inherited from
| xref::class/Bid.adoc[`Bid`]


|===

//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#pickUpRampRate]
=== `pickUpRampRate`
+++Maximum rate load may be restored (MW/minute)+++

[cols="h,4",width=65%]
|===
| URI
| `cim:LoadBid.pickUpRampRate`
| Cardinality
| 0..1
| Type
| xref::class/ActivePowerChangeRate.adoc[`ActivePowerChangeRate`]


|===

//[discrete]
[#priceSetting]
=== `priceSetting`
+++Flag to indicate that the facility can set LMP Works in tandem with Metered Value.  Greater chance of this being dynamic than the Metered Value, however, it is requested that Price Setting and Metered Value stay at the same source.  Currently no customers have implemented the metering capability, but if this option is implemented, then Price Setting could become dynamic.  However, Metered Value will remain static.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:LoadBid.priceSetting`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]


|===

//[discrete]
[#ProductBids]
=== `ProductBids`
+++A bid comprises one or more product bids of market products+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Bid.ProductBids`
| Cardinality
| 1..*
| Type
| xref::class/ProductBid.adoc[`ProductBid`]

| Inherited from
| xref::class/Bid.adoc[`Bid`]


|===

//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#RampRateCurve]
=== `RampRateCurve`


[cols="h,4",width=65%]
|===
| URI
| `cim:LoadBid.RampRateCurve`
| Cardinality
| 0..*
| Type
| xref::class/RampRateCurve.adoc[`RampRateCurve`]


|===

//[discrete]
[#RegisteredLoad]
=== `RegisteredLoad`


[cols="h,4",width=65%]
|===
| URI
| `cim:LoadBid.RegisteredLoad`
| Cardinality
| 0..1
| Type
| xref::class/RegisteredLoad.adoc[`RegisteredLoad`]


|===

//[discrete]
[#reqNoticeTime]
=== `reqNoticeTime`
+++Time period that is required from an order to reduce a load to the time that it takes to get to the minimum load reduction.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:LoadBid.reqNoticeTime`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#resourceLoadingType]
=== `resourceLoadingType`
+++Resource loading curve type
1 - step-wise continuous loading
2 - piece-wise linear continuous loading
3 - block loading+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ResourceBid.resourceLoadingType`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Integer[`integer`]

| Inherited from
| xref::class/ResourceBid.adoc[`ResourceBid`]


|===

//[discrete]
[#revisionNumber]
=== `revisionNumber`
+++Revision number for this document.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Document.revisionNumber`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

//[discrete]
[#RMRDetermination]
=== `RMRDetermination`


[cols="h,4",width=65%]
|===
| URI
| `cim:Bid.RMRDetermination`
| Cardinality
| 0..*
| Type
| xref::class/RMRDetermination.adoc[`RMRDetermination`]

| Inherited from
| xref::class/Bid.adoc[`Bid`]


|===

//[discrete]
[#shutdownCost]
=== `shutdownCost`
+++The fixed cost associated with committing a load reduction.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:LoadBid.shutdownCost`
| Cardinality
| 0..1
| Type
| xref::class/Money.adoc[`Money`]


|===

//[discrete]
[#shutDownsMaxDay]
=== `shutDownsMaxDay`
+++Maximum number of shutdowns per day.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ResourceBid.shutDownsMaxDay`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Integer[`integer`]

| Inherited from
| xref::class/ResourceBid.adoc[`ResourceBid`]


|===

//[discrete]
[#shutDownsMaxWeek]
=== `shutDownsMaxWeek`
+++Maximum number of shutdowns per week.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ResourceBid.shutDownsMaxWeek`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Integer[`integer`]

| Inherited from
| xref::class/ResourceBid.adoc[`ResourceBid`]


|===

//[discrete]
[#startTime]
=== `startTime`
+++Start time and date for which bid applies.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Bid.startTime`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Date[`date`]

| Inherited from
| xref::class/Bid.adoc[`Bid`]


|===

//[discrete]
[#startUpsMaxDay]
=== `startUpsMaxDay`
+++Maximum number of startups per day.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ResourceBid.startUpsMaxDay`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Integer[`integer`]

| Inherited from
| xref::class/ResourceBid.adoc[`ResourceBid`]


|===

//[discrete]
[#startUpsMaxWeek]
=== `startUpsMaxWeek`
+++Maximum number of startups per week.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ResourceBid.startUpsMaxWeek`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Integer[`integer`]

| Inherited from
| xref::class/ResourceBid.adoc[`ResourceBid`]


|===

//[discrete]
[#status]
=== `status`
+++Status of subject matter (e.g., Agreement, Work) this document represents. For status of the document itself, use 'docStatus' attribute.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Document.status`
| Cardinality
| 0..1
| Type
| xref::class/Status.adoc[`Status`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

//[discrete]
[#stopTime]
=== `stopTime`
+++Stop time and date for which bid is applicable.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Bid.stopTime`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Date[`date`]

| Inherited from
| xref::class/Bid.adoc[`Bid`]


|===

//[discrete]
[#subject]
=== `subject`
+++Document subject.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Document.subject`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#title]
=== `title`
+++Document title.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Document.title`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

//[discrete]
[#type]
=== `type`
+++Utility-specific classification of this document, according to its corporate standards, practices, and existing IT systems (e.g., for management of assets, maintenance, work, outage, customers, etc.).+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Document.type`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

//[discrete]
[#virtual]
=== `virtual`
+++True if bid is virtual.  Bid is assumed to be non-virtual if attribute is absent+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ResourceBid.virtual`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]

| Inherited from
| xref::class/ResourceBid.adoc[`ResourceBid`]


|===


