v1.1.0/modules/schema/pages/class/LoadBid.adoc
= `LoadBid`
:toclevels: 4


+++Offer to supply energy/ancillary services from a load resource (participating load reduces consumption).+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:LoadBid`


| CIM standard (perspective)
| IEC62325 (Market)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** xref::class/Document.adoc[`Document`]
*** xref::class/Bid.adoc[`Bid`]
**** xref::class/ResourceBid.adoc[`ResourceBid`]
***** *`LoadBid`*


== Slots




[cols="1,1,2,1",width=100%]
|===
| Name | Type | Description | Inherited from

| <<AreaLoadBid,`AreaLoadBid`>>
//| [[slots_table.AreaLoadBid]]<<AreaLoadBid,`AreaLoadBid`>>
| 0..1 +
xref::class/AreaLoadBid.adoc[`AreaLoadBid`]
| _n/a_
| _n/a_

| <<LoadReductionPriceCurve,`LoadReductionPriceCurve`>>
//| [[slots_table.LoadReductionPriceCurve]]<<LoadReductionPriceCurve,`LoadReductionPriceCurve`>>
| 0..* +
xref::class/LoadReductionPriceCurve.adoc[`LoadReductionPriceCurve`]
| _n/a_
| _n/a_

| <<RampRateCurve,`RampRateCurve`>>
//| [[slots_table.RampRateCurve]]<<RampRateCurve,`RampRateCurve`>>
| 0..* +
xref::class/RampRateCurve.adoc[`RampRateCurve`]
| _n/a_
| _n/a_

| <<RegisteredLoad,`RegisteredLoad`>>
//| [[slots_table.RegisteredLoad]]<<RegisteredLoad,`RegisteredLoad`>>
| 0..1 +
xref::class/RegisteredLoad.adoc[`RegisteredLoad`]
| _n/a_
| _n/a_

| <<dropRampRate,`dropRampRate`>>
//| [[slots_table.dropRampRate]]<<dropRampRate,`dropRampRate`>>
| 0..1 +
xref::class/ActivePowerChangeRate.adoc[`ActivePowerChangeRate`]
| +++Maximum rate that load can be reduced (MW/minute)+++
| _n/a_

| <<loadRedInitiationCost,`loadRedInitiationCost`>>
//| [[slots_table.loadRedInitiationCost]]<<loadRedInitiationCost,`loadRedInitiationCost`>>
| 0..1 +
xref::class/Money.adoc[`Money`]
| +++load reduction initiation cost+++
| _n/a_

| <<loadRedInitiationTime,`loadRedInitiationTime`>>
//| [[slots_table.loadRedInitiationTime]]<<loadRedInitiationTime,`loadRedInitiationTime`>>
| 0..1 +
https://w3id.org/linkml/Float[`float`]
| +++load reduction initiation time+++
| _n/a_

| <<marketDate,`marketDate`>>
//| [[slots_table.marketDate]]<<marketDate,`marketDate`>>
| 0..1 +
https://w3id.org/linkml/Date[`date`]
| +++The date represents the NextMarketDate for which the load response bids apply to.+++
| _n/a_

| <<meteredValue,`meteredValue`>>
//| [[slots_table.meteredValue]]<<meteredValue,`meteredValue`>>
| 0..1 +
https://w3id.org/linkml/Boolean[`boolean`]
| +++Flag indicated that the load reduction is metered. (See above)
If priceSetting and meteredValue both equal 1, then the...+++
| _n/a_

| <<minLoad,`minLoad`>>
//| [[slots_table.minLoad]]<<minLoad,`minLoad`>>
| 0..1 +
xref::class/ActivePower.adoc[`ActivePower`]
| +++Minimum MW load below which it may not be reduced.+++
| _n/a_

| <<minLoadReduction,`minLoadReduction`>>
//| [[slots_table.minLoadReduction]]<<minLoadReduction,`minLoadReduction`>>
| 0..1 +
xref::class/ActivePower.adoc[`ActivePower`]
| +++Minimum MW for a load reduction (e.g. MW rating of a discrete pump.+++
| _n/a_

| <<minLoadReductionCost,`minLoadReductionCost`>>
//| [[slots_table.minLoadReductionCost]]<<minLoadReductionCost,`minLoadReductionCost`>>
| 0..1 +
xref::class/Money.adoc[`Money`]
| +++Cost in $ at the minimum reduced load+++
| _n/a_

| <<minLoadReductionInterval,`minLoadReductionInterval`>>
//| [[slots_table.minLoadReductionInterval]]<<minLoadReductionInterval,`minLoadReductionInterval`>>
| 0..1 +
https://w3id.org/linkml/Float[`float`]
| +++Shortest period load reduction shall be maintained before load can be restored to normal levels.+++
| _n/a_

| <<minTimeBetLoadRed,`minTimeBetLoadRed`>>
//| [[slots_table.minTimeBetLoadRed]]<<minTimeBetLoadRed,`minTimeBetLoadRed`>>
| 0..1 +
https://w3id.org/linkml/Float[`float`]
| +++Shortest time that load shall be left at normal levels before a new load reduction.+++
| _n/a_

| <<pickUpRampRate,`pickUpRampRate`>>
//| [[slots_table.pickUpRampRate]]<<pickUpRampRate,`pickUpRampRate`>>
| 0..1 +
xref::class/ActivePowerChangeRate.adoc[`ActivePowerChangeRate`]
| +++Maximum rate load may be restored (MW/minute)+++
| _n/a_

| <<priceSetting,`priceSetting`>>
//| [[slots_table.priceSetting]]<<priceSetting,`priceSetting`>>
| 0..1 +
https://w3id.org/linkml/Boolean[`boolean`]
| +++Flag to indicate that the facility can set LMP Works in tandem with Metered Value.  Greater chance of this being dynamic...+++
| _n/a_

| <<reqNoticeTime,`reqNoticeTime`>>
//| [[slots_table.reqNoticeTime]]<<reqNoticeTime,`reqNoticeTime`>>
| 0..1 +
https://w3id.org/linkml/Float[`float`]
| +++Time period that is required from an order to reduce a load to the time that it takes to get to the minimum load reduction.+++
| _n/a_

| <<shutdownCost,`shutdownCost`>>
//| [[slots_table.shutdownCost]]<<shutdownCost,`shutdownCost`>>
| 0..1 +
xref::class/Money.adoc[`Money`]
| +++The fixed cost associated with committing a load reduction.+++
| _n/a_

| <<BidError,`BidError`>>
//| [[slots_table.BidError]]<<BidError,`BidError`>>
| 0..* +
xref::class/BidError.adoc[`BidError`]
| _n/a_
| xref::class/ResourceBid.adoc[`ResourceBid`]

| <<aggregationFlag,`aggregationFlag`>>
//| [[slots_table.aggregationFlag]]<<aggregationFlag,`aggregationFlag`>>
| 0..1 +
https://w3id.org/linkml/Integer[`integer`]
| +++Aggregation flag 
0: individual resource level
1: Aggregated node location
2: Aggregated price location)+++
| xref::class/ResourceBid.adoc[`ResourceBid`]

| <<bidStatus,`bidStatus`>>
//| [[slots_table.bidStatus]]<<bidStatus,`bidStatus`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| _n/a_
| xref::class/ResourceBid.adoc[`ResourceBid`]

| <<commodityType,`commodityType`>>
//| [[slots_table.commodityType]]<<commodityType,`commodityType`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Energy product (commodity) type:
'En' - Energy
'Ru' - Regulation Up
'Rd' - Regulation Dn
'Sr' - Spinning Reserve
'Nr' -...+++
| xref::class/ResourceBid.adoc[`ResourceBid`]

| <<contingencyAvailFlag,`contingencyAvailFlag`>>
//| [[slots_table.contingencyAvailFlag]]<<contingencyAvailFlag,`contingencyAvailFlag`>>
| 0..1 +
xref::enumeration/YesNo.adoc[`YesNo`]
| +++contingent operating reserve availiability (Yes/No). Resource is availiable to participate with capacity only in contingency...+++
| xref::class/ResourceBid.adoc[`ResourceBid`]

| <<createdISO,`createdISO`>>
//| [[slots_table.createdISO]]<<createdISO,`createdISO`>>
| 0..1 +
xref::enumeration/YesNo.adoc[`YesNo`]
| +++A Yes indicates that this bid was created by the ISO.+++
| xref::class/ResourceBid.adoc[`ResourceBid`]

| <<energyMaxDay,`energyMaxDay`>>
//| [[slots_table.energyMaxDay]]<<energyMaxDay,`energyMaxDay`>>
| 0..1 +
https://w3id.org/linkml/Float[`float`]
| +++Maximum amount of energy per day which can be produced during the trading period in MWh+++
| xref::class/ResourceBid.adoc[`ResourceBid`]

| <<energyMinDay,`energyMinDay`>>
//| [[slots_table.energyMinDay]]<<energyMinDay,`energyMinDay`>>
| 0..1 +
https://w3id.org/linkml/Float[`float`]
| +++Minimum amount of energy per day which has to be produced during the trading period in MWh+++
| xref::class/ResourceBid.adoc[`ResourceBid`]

| <<marketSepFlag,`marketSepFlag`>>
//| [[slots_table.marketSepFlag]]<<marketSepFlag,`marketSepFlag`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Market Separation Flag

'Y' - Enforce market separation constraints for this bid 
'N' - Don't enforce market separation...+++
| xref::class/ResourceBid.adoc[`ResourceBid`]

| <<minDispatchTime,`minDispatchTime`>>
//| [[slots_table.minDispatchTime]]<<minDispatchTime,`minDispatchTime`>>
| 0..1 +
https://w3id.org/linkml/Integer[`integer`]
| +++minimum number of consecutive hours a resource shall be dispatched if bid is accepted+++
| xref::class/ResourceBid.adoc[`ResourceBid`]

| <<resourceLoadingType,`resourceLoadingType`>>
//| [[slots_table.resourceLoadingType]]<<resourceLoadingType,`resourceLoadingType`>>
| 0..1 +
https://w3id.org/linkml/Integer[`integer`]
| +++Resource loading curve type
1 - step-wise continuous loading
2 - piece-wise linear continuous loading
3 - block loading+++
| xref::class/ResourceBid.adoc[`ResourceBid`]

| <<shutDownsMaxDay,`shutDownsMaxDay`>>
//| [[slots_table.shutDownsMaxDay]]<<shutDownsMaxDay,`shutDownsMaxDay`>>
| 0..1 +
https://w3id.org/linkml/Integer[`integer`]
| +++Maximum number of shutdowns per day.+++
| xref::class/ResourceBid.adoc[`ResourceBid`]

| <<shutDownsMaxWeek,`shutDownsMaxWeek`>>
//| [[slots_table.shutDownsMaxWeek]]<<shutDownsMaxWeek,`shutDownsMaxWeek`>>
| 0..1 +
https://w3id.org/linkml/Integer[`integer`]
| +++Maximum number of shutdowns per week.+++
| xref::class/ResourceBid.adoc[`ResourceBid`]

| <<startUpsMaxDay,`startUpsMaxDay`>>
//| [[slots_table.startUpsMaxDay]]<<startUpsMaxDay,`startUpsMaxDay`>>
| 0..1 +
https://w3id.org/linkml/Integer[`integer`]
| +++Maximum number of startups per day.+++
| xref::class/ResourceBid.adoc[`ResourceBid`]

| <<startUpsMaxWeek,`startUpsMaxWeek`>>
//| [[slots_table.startUpsMaxWeek]]<<startUpsMaxWeek,`startUpsMaxWeek`>>
| 0..1 +
https://w3id.org/linkml/Integer[`integer`]
| +++Maximum number of startups per week.+++
| xref::class/ResourceBid.adoc[`ResourceBid`]

| <<virtual,`virtual`>>
//| [[slots_table.virtual]]<<virtual,`virtual`>>
| 0..1 +
https://w3id.org/linkml/Boolean[`boolean`]
| +++True if bid is virtual.  Bid is assumed to be non-virtual if attribute is absent+++
| xref::class/ResourceBid.adoc[`ResourceBid`]

| <<ActionRequest,`ActionRequest`>>
//| [[slots_table.ActionRequest]]<<ActionRequest,`ActionRequest`>>
| 1 +
xref::class/ActionRequest.adoc[`ActionRequest`]
| _n/a_
| xref::class/Bid.adoc[`Bid`]

| <<BidHourlySchedule,`BidHourlySchedule`>>
//| [[slots_table.BidHourlySchedule]]<<BidHourlySchedule,`BidHourlySchedule`>>
| 0..* +
xref::class/BidHourlySchedule.adoc[`BidHourlySchedule`]
| _n/a_
| xref::class/Bid.adoc[`Bid`]

| <<ChargeProfiles,`ChargeProfiles`>>
//| [[slots_table.ChargeProfiles]]<<ChargeProfiles,`ChargeProfiles`>>
| 0..* +
xref::class/ChargeProfile.adoc[`ChargeProfile`]
| _n/a_
| xref::class/Bid.adoc[`Bid`]

| <<EnergyMarket,`EnergyMarket`>>
//| [[slots_table.EnergyMarket]]<<EnergyMarket,`EnergyMarket`>>
| 1 +
xref::class/EnergyMarket.adoc[`EnergyMarket`]
| _n/a_
| xref::class/Bid.adoc[`Bid`]

| <<MarketParticipant,`MarketParticipant`>>
//| [[slots_table.MarketParticipant]]<<MarketParticipant,`MarketParticipant`>>
| 0..1 +
xref::class/MarketParticipant.adoc[`MarketParticipant`]
| _n/a_
| xref::class/Bid.adoc[`Bid`]

| <<MitigatedBid,`MitigatedBid`>>
//| [[slots_table.MitigatedBid]]<<MitigatedBid,`MitigatedBid`>>
| 0..* +
xref::class/MitigatedBid.adoc[`MitigatedBid`]
| _n/a_
| xref::class/Bid.adoc[`Bid`]

| <<MitigatedBidSegment,`MitigatedBidSegment`>>
//| [[slots_table.MitigatedBidSegment]]<<MitigatedBidSegment,`MitigatedBidSegment`>>
| 0..* +
xref::class/MitigatedBidSegment.adoc[`MitigatedBidSegment`]
| _n/a_
| xref::class/Bid.adoc[`Bid`]

| <<ProductBids,`ProductBids`>>
//| [[slots_table.ProductBids]]<<ProductBids,`ProductBids`>>
| 1..* +
xref::class/ProductBid.adoc[`ProductBid`]
| +++A bid comprises one or more product bids of market products+++
| xref::class/Bid.adoc[`Bid`]

| <<RMRDetermination,`RMRDetermination`>>
//| [[slots_table.RMRDetermination]]<<RMRDetermination,`RMRDetermination`>>
| 0..* +
xref::class/RMRDetermination.adoc[`RMRDetermination`]
| _n/a_
| xref::class/Bid.adoc[`Bid`]

| <<marketType,`marketType`>>
//| [[slots_table.marketType]]<<marketType,`marketType`>>
| 0..1 +
xref::enumeration/MarketType.adoc[`MarketType`]
| +++The market type, DAM or RTM.+++
| xref::class/Bid.adoc[`Bid`]

| <<startTime,`startTime`>>
//| [[slots_table.startTime]]<<startTime,`startTime`>>
| 0..1 +
https://w3id.org/linkml/Date[`date`]
| +++Start time and date for which bid applies.+++
| xref::class/Bid.adoc[`Bid`]

| <<stopTime,`stopTime`>>
//| [[slots_table.stopTime]]<<stopTime,`stopTime`>>
| 0..1 +
https://w3id.org/linkml/Date[`date`]
| +++Stop time and date for which bid is applicable.+++
| xref::class/Bid.adoc[`Bid`]

| <<ActivityRecord,`ActivityRecord`>>
//| [[slots_table.ActivityRecord]]<<ActivityRecord,`ActivityRecord`>>
| 0..* +
xref::class/ActivityRecord.adoc[`ActivityRecord`]
| +++The activity record for a document+++
| xref::class/Document.adoc[`Document`]

| <<Approver,`Approver`>>
//| [[slots_table.Approver]]<<Approver,`Approver`>>
| 0..1 +
xref::class/Approver.adoc[`Approver`]
| +++Approver of this document.+++
| xref::class/Document.adoc[`Document`]

| <<Author,`Author`>>
//| [[slots_table.Author]]<<Author,`Author`>>
| 0..1 +
xref::class/Author.adoc[`Author`]
| +++Author of this document.+++
| xref::class/Document.adoc[`Document`]

| <<ConfigurationEvents,`ConfigurationEvents`>>
//| [[slots_table.ConfigurationEvents]]<<ConfigurationEvents,`ConfigurationEvents`>>
| 0..* +
xref::class/ConfigurationEvent.adoc[`ConfigurationEvent`]
| +++All configuration events created for this document.+++
| xref::class/Document.adoc[`Document`]

| <<Editor,`Editor`>>
//| [[slots_table.Editor]]<<Editor,`Editor`>>
| 0..1 +
xref::class/Editor.adoc[`Editor`]
| +++Editor of this document.+++
| xref::class/Document.adoc[`Document`]

| <<Issuer,`Issuer`>>
//| [[slots_table.Issuer]]<<Issuer,`Issuer`>>
| 0..1 +
xref::class/Issuer.adoc[`Issuer`]
| +++Issuer of this document.+++
| xref::class/Document.adoc[`Document`]

| <<authorName,`authorName`>>
//| [[slots_table.authorName]]<<authorName,`authorName`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Name of the author of this document.+++
| xref::class/Document.adoc[`Document`]

| <<comment,`comment`>>
//| [[slots_table.comment]]<<comment,`comment`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Free text comment.+++
| xref::class/Document.adoc[`Document`]

| <<createdDateTime,`createdDateTime`>>
//| [[slots_table.createdDateTime]]<<createdDateTime,`createdDateTime`>>
| 0..1 +
https://w3id.org/linkml/Date[`date`]
| +++Date and time that this document was created.+++
| xref::class/Document.adoc[`Document`]

| <<docStatus,`docStatus`>>
//| [[slots_table.docStatus]]<<docStatus,`docStatus`>>
| 0..1 +
xref::class/Status.adoc[`Status`]
| +++Status of this document. For status of subject matter this document represents (e.g., Agreement, Work), use 'status'...+++
| xref::class/Document.adoc[`Document`]

| <<electronicAddress,`electronicAddress`>>
//| [[slots_table.electronicAddress]]<<electronicAddress,`electronicAddress`>>
| 0..1 +
xref::class/ElectronicAddress.adoc[`ElectronicAddress`]
| +++Electronic address.+++
| xref::class/Document.adoc[`Document`]

| <<lastModifiedDateTime,`lastModifiedDateTime`>>
//| [[slots_table.lastModifiedDateTime]]<<lastModifiedDateTime,`lastModifiedDateTime`>>
| 0..1 +
https://w3id.org/linkml/Date[`date`]
| +++Date and time this document was last modified. Documents may potentially be modified many times during their lifetime.+++
| xref::class/Document.adoc[`Document`]

| <<revisionNumber,`revisionNumber`>>
//| [[slots_table.revisionNumber]]<<revisionNumber,`revisionNumber`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Revision number for this document.+++
| xref::class/Document.adoc[`Document`]

| <<status,`status`>>
//| [[slots_table.status]]<<status,`status`>>
| 0..1 +
xref::class/Status.adoc[`Status`]
| +++Status of subject matter (e.g., Agreement, Work) this document represents. For status of the document itself, use...+++
| xref::class/Document.adoc[`Document`]

| <<subject,`subject`>>
//| [[slots_table.subject]]<<subject,`subject`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Document subject.+++
| xref::class/Document.adoc[`Document`]

| <<title,`title`>>
//| [[slots_table.title]]<<title,`title`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Document title.+++
| xref::class/Document.adoc[`Document`]

| <<type,`type`>>
//| [[slots_table.type]]<<type,`type`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Utility-specific classification of this document, according to its corporate standards, practices, and existing IT systems...+++
| xref::class/Document.adoc[`Document`]

| <<DiagramObjects,`DiagramObjects`>>
//| [[slots_table.DiagramObjects]]<<DiagramObjects,`DiagramObjects`>>
| 0..* +
xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<InstanceSet,`InstanceSet`>>
//| [[slots_table.InstanceSet]]<<InstanceSet,`InstanceSet`>>
| 1 +
xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<Names,`Names`>>
//| [[slots_table.Names]]<<Names,`Names`>>
| 0..* +
xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
//| [[slots_table.PropertiesCIMDataObject]]<<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1 +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
//| [[slots_table.TargetingCIMDataObject]]<<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..* +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<aliasName,`aliasName`>>
//| [[slots_table.aliasName]]<<aliasName,`aliasName`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<description,`description`>>
//| [[slots_table.description]]<<description,`description`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<mRID,`mRID`>>
//| [[slots_table.mRID]]<<mRID,`mRID`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<name,`name`>>
//| [[slots_table.name]]<<name,`name`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
|===

'''


//[discrete]
[#ActionRequest]
=== `ActionRequest`



[cols="h,4",width=65%]
|===
| URI
| `cim:Bid.ActionRequest`
| Cardinality
| 1
| Type
| xref::class/ActionRequest.adoc[`ActionRequest`]

| Inherited from
| xref::class/Bid.adoc[`Bid`]


|===

////
[.text-left]
--
<<slots_table.ActionRequest,&#10548;>>
--
////


//[discrete]
[#ActivityRecord]
=== `ActivityRecord`
+++The activity record for a document+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Document.ActivityRecord`
| Cardinality
| 0..*
| Type
| xref::class/ActivityRecord.adoc[`ActivityRecord`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

////
[.text-left]
--
<<slots_table.ActivityRecord,&#10548;>>
--
////


//[discrete]
[#aggregationFlag]
=== `aggregationFlag`
+++Aggregation flag 
0: individual resource level
1: Aggregated node location
2: Aggregated price location)+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ResourceBid.aggregationFlag`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Integer[`integer`]

| Inherited from
| xref::class/ResourceBid.adoc[`ResourceBid`]


|===

////
[.text-left]
--
<<slots_table.aggregationFlag,&#10548;>>
--
////


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.aliasName,&#10548;>>
--
////


//[discrete]
[#Approver]
=== `Approver`
+++Approver of this document.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Document.Approver`
| Cardinality
| 0..1
| Type
| xref::class/Approver.adoc[`Approver`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

////
[.text-left]
--
<<slots_table.Approver,&#10548;>>
--
////


//[discrete]
[#AreaLoadBid]
=== `AreaLoadBid`



[cols="h,4",width=65%]
|===
| URI
| `cim:LoadBid.AreaLoadBid`
| Cardinality
| 0..1
| Type
| xref::class/AreaLoadBid.adoc[`AreaLoadBid`]


|===

////
[.text-left]
--
<<slots_table.AreaLoadBid,&#10548;>>
--
////


//[discrete]
[#Author]
=== `Author`
+++Author of this document.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Document.Author`
| Cardinality
| 0..1
| Type
| xref::class/Author.adoc[`Author`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

////
[.text-left]
--
<<slots_table.Author,&#10548;>>
--
////


//[discrete]
[#authorName]
=== `authorName`
+++Name of the author of this document.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Document.authorName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

////
[.text-left]
--
<<slots_table.authorName,&#10548;>>
--
////


//[discrete]
[#BidError]
=== `BidError`



[cols="h,4",width=65%]
|===
| URI
| `cim:ResourceBid.BidError`
| Cardinality
| 0..*
| Type
| xref::class/BidError.adoc[`BidError`]

| Inherited from
| xref::class/ResourceBid.adoc[`ResourceBid`]


|===

////
[.text-left]
--
<<slots_table.BidError,&#10548;>>
--
////


//[discrete]
[#BidHourlySchedule]
=== `BidHourlySchedule`



[cols="h,4",width=65%]
|===
| URI
| `cim:Bid.BidHourlySchedule`
| Cardinality
| 0..*
| Type
| xref::class/BidHourlySchedule.adoc[`BidHourlySchedule`]

| Inherited from
| xref::class/Bid.adoc[`Bid`]


|===

////
[.text-left]
--
<<slots_table.BidHourlySchedule,&#10548;>>
--
////


//[discrete]
[#bidStatus]
=== `bidStatus`



[cols="h,4",width=65%]
|===
| URI
| `cim:ResourceBid.bidStatus`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/ResourceBid.adoc[`ResourceBid`]


|===

////
[.text-left]
--
<<slots_table.bidStatus,&#10548;>>
--
////


//[discrete]
[#ChargeProfiles]
=== `ChargeProfiles`



[cols="h,4",width=65%]
|===
| URI
| `cim:Bid.ChargeProfiles`
| Cardinality
| 0..*
| Type
| xref::class/ChargeProfile.adoc[`ChargeProfile`]

| Inherited from
| xref::class/Bid.adoc[`Bid`]


|===

////
[.text-left]
--
<<slots_table.ChargeProfiles,&#10548;>>
--
////


//[discrete]
[#comment]
=== `comment`
+++Free text comment.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Document.comment`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

////
[.text-left]
--
<<slots_table.comment,&#10548;>>
--
////


//[discrete]
[#commodityType]
=== `commodityType`
+++Energy product (commodity) type:
'En' - Energy
'Ru' - Regulation Up
'Rd' - Regulation Dn
'Sr' - Spinning Reserve
'Nr' - Non-Spinning Reserve
'Or' - Operating Reserve+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ResourceBid.commodityType`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/ResourceBid.adoc[`ResourceBid`]


|===

////
[.text-left]
--
<<slots_table.commodityType,&#10548;>>
--
////


//[discrete]
[#ConfigurationEvents]
=== `ConfigurationEvents`
+++All configuration events created for this document.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Document.ConfigurationEvents`
| Cardinality
| 0..*
| Type
| xref::class/ConfigurationEvent.adoc[`ConfigurationEvent`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

////
[.text-left]
--
<<slots_table.ConfigurationEvents,&#10548;>>
--
////


//[discrete]
[#contingencyAvailFlag]
=== `contingencyAvailFlag`
+++contingent operating reserve availiability (Yes/No). Resource is availiable to participate with capacity only in contingency dispatch.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ResourceBid.contingencyAvailFlag`
| Cardinality
| 0..1
| Type
| xref::enumeration/YesNo.adoc[`YesNo`]

| Inherited from
| xref::class/ResourceBid.adoc[`ResourceBid`]


|===

////
[.text-left]
--
<<slots_table.contingencyAvailFlag,&#10548;>>
--
////


//[discrete]
[#createdDateTime]
=== `createdDateTime`
+++Date and time that this document was created.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Document.createdDateTime`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Date[`date`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

////
[.text-left]
--
<<slots_table.createdDateTime,&#10548;>>
--
////


//[discrete]
[#createdISO]
=== `createdISO`
+++A Yes indicates that this bid was created by the ISO.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ResourceBid.createdISO`
| Cardinality
| 0..1
| Type
| xref::enumeration/YesNo.adoc[`YesNo`]

| Inherited from
| xref::class/ResourceBid.adoc[`ResourceBid`]


|===

////
[.text-left]
--
<<slots_table.createdISO,&#10548;>>
--
////


//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.description,&#10548;>>
--
////


//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.DiagramObjects,&#10548;>>
--
////


//[discrete]
[#docStatus]
=== `docStatus`
+++Status of this document. For status of subject matter this document represents (e.g., Agreement, Work), use 'status' attribute.
Example values for 'docStatus.status' are draft, approved, cancelled, etc.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Document.docStatus`
| Cardinality
| 0..1
| Type
| xref::class/Status.adoc[`Status`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

////
[.text-left]
--
<<slots_table.docStatus,&#10548;>>
--
////


//[discrete]
[#dropRampRate]
=== `dropRampRate`
+++Maximum rate that load can be reduced (MW/minute)+++


[cols="h,4",width=65%]
|===
| URI
| `cim:LoadBid.dropRampRate`
| Cardinality
| 0..1
| Type
| xref::class/ActivePowerChangeRate.adoc[`ActivePowerChangeRate`]


|===

////
[.text-left]
--
<<slots_table.dropRampRate,&#10548;>>
--
////


//[discrete]
[#Editor]
=== `Editor`
+++Editor of this document.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Document.Editor`
| Cardinality
| 0..1
| Type
| xref::class/Editor.adoc[`Editor`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

////
[.text-left]
--
<<slots_table.Editor,&#10548;>>
--
////


//[discrete]
[#electronicAddress]
=== `electronicAddress`
+++Electronic address.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Document.electronicAddress`
| Cardinality
| 0..1
| Type
| xref::class/ElectronicAddress.adoc[`ElectronicAddress`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

////
[.text-left]
--
<<slots_table.electronicAddress,&#10548;>>
--
////


//[discrete]
[#EnergyMarket]
=== `EnergyMarket`



[cols="h,4",width=65%]
|===
| URI
| `cim:Bid.EnergyMarket`
| Cardinality
| 1
| Type
| xref::class/EnergyMarket.adoc[`EnergyMarket`]

| Inherited from
| xref::class/Bid.adoc[`Bid`]


|===

////
[.text-left]
--
<<slots_table.EnergyMarket,&#10548;>>
--
////


//[discrete]
[#energyMaxDay]
=== `energyMaxDay`
+++Maximum amount of energy per day which can be produced during the trading period in MWh+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ResourceBid.energyMaxDay`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]

| Inherited from
| xref::class/ResourceBid.adoc[`ResourceBid`]


|===

////
[.text-left]
--
<<slots_table.energyMaxDay,&#10548;>>
--
////


//[discrete]
[#energyMinDay]
=== `energyMinDay`
+++Minimum amount of energy per day which has to be produced during the trading period in MWh+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ResourceBid.energyMinDay`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]

| Inherited from
| xref::class/ResourceBid.adoc[`ResourceBid`]


|===

////
[.text-left]
--
<<slots_table.energyMinDay,&#10548;>>
--
////


//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.InstanceSet,&#10548;>>
--
////


//[discrete]
[#Issuer]
=== `Issuer`
+++Issuer of this document.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Document.Issuer`
| Cardinality
| 0..1
| Type
| xref::class/Issuer.adoc[`Issuer`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

////
[.text-left]
--
<<slots_table.Issuer,&#10548;>>
--
////


//[discrete]
[#lastModifiedDateTime]
=== `lastModifiedDateTime`
+++Date and time this document was last modified. Documents may potentially be modified many times during their lifetime.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Document.lastModifiedDateTime`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Date[`date`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

////
[.text-left]
--
<<slots_table.lastModifiedDateTime,&#10548;>>
--
////


//[discrete]
[#loadRedInitiationCost]
=== `loadRedInitiationCost`
+++load reduction initiation cost+++


[cols="h,4",width=65%]
|===
| URI
| `cim:LoadBid.loadRedInitiationCost`
| Cardinality
| 0..1
| Type
| xref::class/Money.adoc[`Money`]


|===

////
[.text-left]
--
<<slots_table.loadRedInitiationCost,&#10548;>>
--
////


//[discrete]
[#loadRedInitiationTime]
=== `loadRedInitiationTime`
+++load reduction initiation time+++


[cols="h,4",width=65%]
|===
| URI
| `cim:LoadBid.loadRedInitiationTime`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

////
[.text-left]
--
<<slots_table.loadRedInitiationTime,&#10548;>>
--
////


//[discrete]
[#LoadReductionPriceCurve]
=== `LoadReductionPriceCurve`



[cols="h,4",width=65%]
|===
| URI
| `cim:LoadBid.LoadReductionPriceCurve`
| Cardinality
| 0..*
| Type
| xref::class/LoadReductionPriceCurve.adoc[`LoadReductionPriceCurve`]


|===

////
[.text-left]
--
<<slots_table.LoadReductionPriceCurve,&#10548;>>
--
////


//[discrete]
[#marketDate]
=== `marketDate`
+++The date represents the NextMarketDate for which the load response bids apply to.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:LoadBid.marketDate`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Date[`date`]


|===

////
[.text-left]
--
<<slots_table.marketDate,&#10548;>>
--
////


//[discrete]
[#MarketParticipant]
=== `MarketParticipant`



[cols="h,4",width=65%]
|===
| URI
| `cim:Bid.MarketParticipant`
| Cardinality
| 0..1
| Type
| xref::class/MarketParticipant.adoc[`MarketParticipant`]

| Inherited from
| xref::class/Bid.adoc[`Bid`]


|===

////
[.text-left]
--
<<slots_table.MarketParticipant,&#10548;>>
--
////


//[discrete]
[#marketSepFlag]
=== `marketSepFlag`
+++Market Separation Flag

'Y' - Enforce market separation constraints for this bid 
'N' - Don't enforce market separation constraints for this bid.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ResourceBid.marketSepFlag`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/ResourceBid.adoc[`ResourceBid`]


|===

////
[.text-left]
--
<<slots_table.marketSepFlag,&#10548;>>
--
////


//[discrete]
[#marketType]
=== `marketType`
+++The market type, DAM or RTM.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Bid.marketType`
| Cardinality
| 0..1
| Type
| xref::enumeration/MarketType.adoc[`MarketType`]

| Inherited from
| xref::class/Bid.adoc[`Bid`]


|===

////
[.text-left]
--
<<slots_table.marketType,&#10548;>>
--
////


//[discrete]
[#meteredValue]
=== `meteredValue`
+++Flag indicated that the load reduction is metered. (See above)
If priceSetting and meteredValue both equal 1, then the facility is eligible to set LMP in the real time market.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:LoadBid.meteredValue`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]


|===

////
[.text-left]
--
<<slots_table.meteredValue,&#10548;>>
--
////


//[discrete]
[#minDispatchTime]
=== `minDispatchTime`
+++minimum number of consecutive hours a resource shall be dispatched if bid is accepted+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ResourceBid.minDispatchTime`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Integer[`integer`]

| Inherited from
| xref::class/ResourceBid.adoc[`ResourceBid`]


|===

////
[.text-left]
--
<<slots_table.minDispatchTime,&#10548;>>
--
////


//[discrete]
[#minLoad]
=== `minLoad`
+++Minimum MW load below which it may not be reduced.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:LoadBid.minLoad`
| Cardinality
| 0..1
| Type
| xref::class/ActivePower.adoc[`ActivePower`]


|===

////
[.text-left]
--
<<slots_table.minLoad,&#10548;>>
--
////


//[discrete]
[#minLoadReduction]
=== `minLoadReduction`
+++Minimum MW for a load reduction (e.g. MW rating of a discrete pump.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:LoadBid.minLoadReduction`
| Cardinality
| 0..1
| Type
| xref::class/ActivePower.adoc[`ActivePower`]


|===

////
[.text-left]
--
<<slots_table.minLoadReduction,&#10548;>>
--
////


//[discrete]
[#minLoadReductionCost]
=== `minLoadReductionCost`
+++Cost in $ at the minimum reduced load+++


[cols="h,4",width=65%]
|===
| URI
| `cim:LoadBid.minLoadReductionCost`
| Cardinality
| 0..1
| Type
| xref::class/Money.adoc[`Money`]


|===

////
[.text-left]
--
<<slots_table.minLoadReductionCost,&#10548;>>
--
////


//[discrete]
[#minLoadReductionInterval]
=== `minLoadReductionInterval`
+++Shortest period load reduction shall be maintained before load can be restored to normal levels.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:LoadBid.minLoadReductionInterval`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

////
[.text-left]
--
<<slots_table.minLoadReductionInterval,&#10548;>>
--
////


//[discrete]
[#minTimeBetLoadRed]
=== `minTimeBetLoadRed`
+++Shortest time that load shall be left at normal levels before a new load reduction.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:LoadBid.minTimeBetLoadRed`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

////
[.text-left]
--
<<slots_table.minTimeBetLoadRed,&#10548;>>
--
////


//[discrete]
[#MitigatedBid]
=== `MitigatedBid`



[cols="h,4",width=65%]
|===
| URI
| `cim:Bid.MitigatedBid`
| Cardinality
| 0..*
| Type
| xref::class/MitigatedBid.adoc[`MitigatedBid`]

| Inherited from
| xref::class/Bid.adoc[`Bid`]


|===

////
[.text-left]
--
<<slots_table.MitigatedBid,&#10548;>>
--
////


//[discrete]
[#MitigatedBidSegment]
=== `MitigatedBidSegment`



[cols="h,4",width=65%]
|===
| URI
| `cim:Bid.MitigatedBidSegment`
| Cardinality
| 0..*
| Type
| xref::class/MitigatedBidSegment.adoc[`MitigatedBidSegment`]

| Inherited from
| xref::class/Bid.adoc[`Bid`]


|===

////
[.text-left]
--
<<slots_table.MitigatedBidSegment,&#10548;>>
--
////


//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.mRID,&#10548;>>
--
////


//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.name,&#10548;>>
--
////


//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.Names,&#10548;>>
--
////


//[discrete]
[#pickUpRampRate]
=== `pickUpRampRate`
+++Maximum rate load may be restored (MW/minute)+++


[cols="h,4",width=65%]
|===
| URI
| `cim:LoadBid.pickUpRampRate`
| Cardinality
| 0..1
| Type
| xref::class/ActivePowerChangeRate.adoc[`ActivePowerChangeRate`]


|===

////
[.text-left]
--
<<slots_table.pickUpRampRate,&#10548;>>
--
////


//[discrete]
[#priceSetting]
=== `priceSetting`
+++Flag to indicate that the facility can set LMP Works in tandem with Metered Value.  Greater chance of this being dynamic than the Metered Value, however, it is requested that Price Setting and Metered Value stay at the same source.  Currently no customers have implemented the metering capability, but if this option is implemented, then Price Setting could become dynamic.  However, Metered Value will remain static.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:LoadBid.priceSetting`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]


|===

////
[.text-left]
--
<<slots_table.priceSetting,&#10548;>>
--
////


//[discrete]
[#ProductBids]
=== `ProductBids`
+++A bid comprises one or more product bids of market products+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Bid.ProductBids`
| Cardinality
| 1..*
| Type
| xref::class/ProductBid.adoc[`ProductBid`]

| Inherited from
| xref::class/Bid.adoc[`Bid`]


|===

////
[.text-left]
--
<<slots_table.ProductBids,&#10548;>>
--
////


//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.PropertiesCIMDataObject,&#10548;>>
--
////


//[discrete]
[#RampRateCurve]
=== `RampRateCurve`



[cols="h,4",width=65%]
|===
| URI
| `cim:LoadBid.RampRateCurve`
| Cardinality
| 0..*
| Type
| xref::class/RampRateCurve.adoc[`RampRateCurve`]


|===

////
[.text-left]
--
<<slots_table.RampRateCurve,&#10548;>>
--
////


//[discrete]
[#RegisteredLoad]
=== `RegisteredLoad`



[cols="h,4",width=65%]
|===
| URI
| `cim:LoadBid.RegisteredLoad`
| Cardinality
| 0..1
| Type
| xref::class/RegisteredLoad.adoc[`RegisteredLoad`]


|===

////
[.text-left]
--
<<slots_table.RegisteredLoad,&#10548;>>
--
////


//[discrete]
[#reqNoticeTime]
=== `reqNoticeTime`
+++Time period that is required from an order to reduce a load to the time that it takes to get to the minimum load reduction.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:LoadBid.reqNoticeTime`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

////
[.text-left]
--
<<slots_table.reqNoticeTime,&#10548;>>
--
////


//[discrete]
[#resourceLoadingType]
=== `resourceLoadingType`
+++Resource loading curve type
1 - step-wise continuous loading
2 - piece-wise linear continuous loading
3 - block loading+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ResourceBid.resourceLoadingType`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Integer[`integer`]

| Inherited from
| xref::class/ResourceBid.adoc[`ResourceBid`]


|===

////
[.text-left]
--
<<slots_table.resourceLoadingType,&#10548;>>
--
////


//[discrete]
[#revisionNumber]
=== `revisionNumber`
+++Revision number for this document.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Document.revisionNumber`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

////
[.text-left]
--
<<slots_table.revisionNumber,&#10548;>>
--
////


//[discrete]
[#RMRDetermination]
=== `RMRDetermination`



[cols="h,4",width=65%]
|===
| URI
| `cim:Bid.RMRDetermination`
| Cardinality
| 0..*
| Type
| xref::class/RMRDetermination.adoc[`RMRDetermination`]

| Inherited from
| xref::class/Bid.adoc[`Bid`]


|===

////
[.text-left]
--
<<slots_table.RMRDetermination,&#10548;>>
--
////


//[discrete]
[#shutdownCost]
=== `shutdownCost`
+++The fixed cost associated with committing a load reduction.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:LoadBid.shutdownCost`
| Cardinality
| 0..1
| Type
| xref::class/Money.adoc[`Money`]


|===

////
[.text-left]
--
<<slots_table.shutdownCost,&#10548;>>
--
////


//[discrete]
[#shutDownsMaxDay]
=== `shutDownsMaxDay`
+++Maximum number of shutdowns per day.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ResourceBid.shutDownsMaxDay`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Integer[`integer`]

| Inherited from
| xref::class/ResourceBid.adoc[`ResourceBid`]


|===

////
[.text-left]
--
<<slots_table.shutDownsMaxDay,&#10548;>>
--
////


//[discrete]
[#shutDownsMaxWeek]
=== `shutDownsMaxWeek`
+++Maximum number of shutdowns per week.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ResourceBid.shutDownsMaxWeek`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Integer[`integer`]

| Inherited from
| xref::class/ResourceBid.adoc[`ResourceBid`]


|===

////
[.text-left]
--
<<slots_table.shutDownsMaxWeek,&#10548;>>
--
////


//[discrete]
[#startTime]
=== `startTime`
+++Start time and date for which bid applies.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Bid.startTime`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Date[`date`]

| Inherited from
| xref::class/Bid.adoc[`Bid`]


|===

////
[.text-left]
--
<<slots_table.startTime,&#10548;>>
--
////


//[discrete]
[#startUpsMaxDay]
=== `startUpsMaxDay`
+++Maximum number of startups per day.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ResourceBid.startUpsMaxDay`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Integer[`integer`]

| Inherited from
| xref::class/ResourceBid.adoc[`ResourceBid`]


|===

////
[.text-left]
--
<<slots_table.startUpsMaxDay,&#10548;>>
--
////


//[discrete]
[#startUpsMaxWeek]
=== `startUpsMaxWeek`
+++Maximum number of startups per week.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ResourceBid.startUpsMaxWeek`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Integer[`integer`]

| Inherited from
| xref::class/ResourceBid.adoc[`ResourceBid`]


|===

////
[.text-left]
--
<<slots_table.startUpsMaxWeek,&#10548;>>
--
////


//[discrete]
[#status]
=== `status`
+++Status of subject matter (e.g., Agreement, Work) this document represents. For status of the document itself, use 'docStatus' attribute.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Document.status`
| Cardinality
| 0..1
| Type
| xref::class/Status.adoc[`Status`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

////
[.text-left]
--
<<slots_table.status,&#10548;>>
--
////


//[discrete]
[#stopTime]
=== `stopTime`
+++Stop time and date for which bid is applicable.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Bid.stopTime`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Date[`date`]

| Inherited from
| xref::class/Bid.adoc[`Bid`]


|===

////
[.text-left]
--
<<slots_table.stopTime,&#10548;>>
--
////


//[discrete]
[#subject]
=== `subject`
+++Document subject.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Document.subject`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

////
[.text-left]
--
<<slots_table.subject,&#10548;>>
--
////


//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.TargetingCIMDataObject,&#10548;>>
--
////


//[discrete]
[#title]
=== `title`
+++Document title.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Document.title`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

////
[.text-left]
--
<<slots_table.title,&#10548;>>
--
////


//[discrete]
[#type]
=== `type`
+++Utility-specific classification of this document, according to its corporate standards, practices, and existing IT systems (e.g., for management of assets, maintenance, work, outage, customers, etc.).+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Document.type`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/Document.adoc[`Document`]


|===

////
[.text-left]
--
<<slots_table.type,&#10548;>>
--
////


//[discrete]
[#virtual]
=== `virtual`
+++True if bid is virtual.  Bid is assumed to be non-virtual if attribute is absent+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ResourceBid.virtual`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]

| Inherited from
| xref::class/ResourceBid.adoc[`ResourceBid`]


|===

////
[.text-left]
--
<<slots_table.virtual,&#10548;>>
--
////





== Used by


[cols="1,1",width=65%]
|===
| Source class | Slot name



| xref::class/AreaLoadBid.adoc[`AreaLoadBid`] | xref::class/AreaLoadBid.adoc#LoadBid[`LoadBid`]



| xref::class/LoadReductionPriceCurve.adoc[`LoadReductionPriceCurve`] | xref::class/LoadReductionPriceCurve.adoc#LoadBid[`LoadBid`]



| xref::class/RampRateCurve.adoc[`RampRateCurve`] | xref::class/RampRateCurve.adoc#LoadBid[`LoadBid`]



| xref::class/RegisteredLoad.adoc[`RegisteredLoad`] | xref::class/RegisteredLoad.adoc#LoadBids[`LoadBids`]


|===

